0023952: Improving thread-safety of intersections, approximations and other modeling algorithms

Modified QAcommands OCC23952sweep and OCC23952intersect to prevent exception in appropriate test cases